[package]
name = "rustdesk-server"
version = "1.0.0"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2021"
description = "A remote control software."

[dependencies]
hbb_common = { path = "libs/hbb_common" }

[[bin]]
name = "rustdesk-server"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test_keyexchange"
path = "src/test_keyexchange.rs"